--- a/index.html
+++ b/index.html
@@ -86,15 +86,16 @@
         }
         
         .cart-icon {
-            position: absolute;
-            top: 10px;
-            right: 150px;
-            font-size: 12px;
+            position: fixed;
+            top: 20px;
+            right: 200px; /* Mudança aqui: era 20px, agora 200px */
+            background: linear-gradient(45deg, #ff00ff, #00ffff);
+            border: 2px solid #00ff00;
+            border-radius: 8px;
+            padding: 10px;
             cursor: pointer;
-            padding: 8px 12px;
-            background: rgba(255, 0, 255, 0.2);
-            border: 2px solid #ff00ff;
-            border-radius: 5px;
+            z-index: 1000;
+            box-shadow: 0 0 20px rgba(255, 0, 255, 0.5);
             transition: all 0.3s ease;
         }
         
