--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         .cart-icon {
             position: fixed;
             top: 20px;
-            right: 200px; /* Mudança aqui: era 20px, agora 200px */
+            right: 280px;
             background: linear-gradient(45deg, #ff00ff, #00ffff);
             border: 2px solid #00ff00;
             border-radius: 8px;
