--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     max-width: 1200px;
     margin: 0 auto;
     height: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
     align-items: center;
-    justify-content: space-between;
     padding: 0 20px;
+    gap: 20px;
 }
 
 .header-logo {
@@ -54,6 +55,8 @@
 .header-nav {
     display: flex;
     gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-link {
@@ -79,7 +82,9 @@
     display: flex;
     align-items: center;
     gap: 15px;
+    justify-content: flex-end;
 }
+
 
 .action-btn {
     font-family: 'Press Start 2P', cursive;
