--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
     max-width: 1200px;
     margin: 0 auto;
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 20px;
-    gap: 20px;
 }
 
 .header-logo {
@@ -55,8 +54,9 @@
 .header-nav {
     display: flex;
     gap: 30px;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .nav-link {
@@ -82,7 +82,6 @@
     display: flex;
     align-items: center;
     gap: 15px;
-    justify-content: flex-end;
 }
 
 
