--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
 }
 
 .header-container {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.header-container {
     max-width: 1200px;
     margin: 0 auto;
     height: 100%;
@@ -56,7 +67,9 @@
     gap: 30px;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
+    align-items: center;
 }
 
 .nav-link {
