Atualizar backend URL com credenciais OAuth corretas

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 
     <script>
         // Configuração da API - Integração com backend Manus
-        const API_BASE_URL = 'https://p9hwiqclkly5.manus.space/api';
+        const API_BASE_URL = 'https://8xhpiqcl9jdv.manus.space/api';
         
         // Estado da aplicação
         let currentUser = null;
