--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
 
     <script>
         // Configuração da API - Integração com backend Manus
-        const API_BASE_URL = 'https://0vhlizck97vl.manus.space/api';
+        const API_BASE_URL = 'https://j6h5i7c0jm33.manus.space/api';
         
         // Estado da aplicação
         let currentUser = null;
