--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
 
     <script>
         // Configuração da API - Integração com backend Manus
-        const API_BASE_URL = 'https://y0h0i3cqx6g6.manus.space/api';
+        const API_BASE_URL = 'https://ogh5izcek0oj.manus.space/api';
         
         // Estado da aplicação
         let currentUser = null;
