🔧 CORREÇÃO FINAL - Backend funcionando 100%
✅ Novo backend estável: https://kkh7ikcl8q33.manus.space
✅ APIs testadas e validadas
✅ Produtos carregando corretamente
✅ Sistema totalmente funcional

Problema resolvido definitivamente!

--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
 
     <script>
         // Configuração da API - Integração com backend Manus
-        const API_BASE_URL = 'https://lnh8imcjvozy.manus.space/api';
+        const API_BASE_URL = 'https://kkh7ikcl8q33.manus.space/api';
         
         // Estado da aplicação
         let currentUser = null;
