--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
 
     <script>
         // Configuração da API - Integração com backend Manus
-        const API_BASE_URL = 'https://zmhqivcvx58n.manus.space/api';
+        const API_BASE_URL = 'https://0vhlizcklvgn.manus.space/api';
         
         // Estado da aplicação
         let currentUser = null;
@@ -1310,12 +1310,6 @@
         function validatePassword(password) {
             if (password.length < 6) {
                 return { valid: false, message: 'Senha deve ter pelo menos 6 caracteres' };
-            }
-            if (!/[A-Za-z]/.test(password)) {
-                return { valid: false, message: 'Senha deve conter pelo menos uma letra' };
-            }
-            if (!/[0-9]/.test(password)) {
-                return { valid: false, message: 'Senha deve conter pelo menos um número' };
             }
             return { valid: true, message: 'Senha válida' };
         }
