Fase 1: Adicionar meta tags SEO, estrutura semântica (main/footer) e estilos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3DBenchy Bros - E-commerce de Impressão 3D</title>
+    <meta name="description" content="A maior loja de modelos 3D para impressão do Brasil! Helicópteros, aviões, tanques com estética pixelizada dos anos 80. Qualidade profissional garantida.">
+    <meta name="keywords" content="impressão 3D, modelos 3D, 3dbenchy, stl, 3d printing, brasil">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P:wght@400&display=swap" rel="stylesheet">
     <style>
@@ -716,6 +718,23 @@
             border: 2px solid #ff0000;
             color: #ff0000;
         }
+
+        /* FOOTER STYLES */
+        footer {
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            border-top: 3px solid #00ffff;
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.3);
+            padding: 20px 0;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        footer p {
+            font-size: 8px;
+            color: #00ffff;
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.8);
+            margin: 0;
+        }
     </style>
 </head>
 <body>
@@ -748,7 +767,8 @@
         </div>
     </header>
 
-    <div class="container">
+    <main role="main">
+        <div class="container">
         <!-- SEÇÃO HOME -->
         <section id="home" class="section active">
             <div class="hero">
@@ -818,7 +838,12 @@
                 </div>
             </div>
         </section>
-    </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 3DBenchy Bros - Todos os direitos reservados</p>
+    </footer>
 
     <!-- MODAL LOGIN/CADASTRO SIMPLES -->
     <div id="loginModal" class="modal">
