feat: Atualizar API_BASE_URL para backend em produção no Render

--- a/index.html
+++ b/index.html
@@ -973,8 +973,8 @@
     </div>
 
     <script>
-        // Configuração da API - Integração com backend Manus
-        const API_BASE_URL = 'https://0vhlizcklvgn.manus.space/api';
+        // Configuração da API - Backend em produção no Render.com
+        const API_BASE_URL = 'https://threedbenchy-bros-backend.onrender.com/api';
         
         // Estado da aplicação
         let currentUser = null;
