--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <title>3DBenchy Bros - E-commerce de Impressão 3D</title>
     <meta name="description" content="A maior loja de modelos 3D para impressão do Brasil! Helicópteros, aviões, tanques com estética pixelizada dos anos 80. Qualidade profissional garantida.">
     <meta name="keywords" content="impressão 3D, modelos 3D, 3dbenchy, stl, 3d printing, brasil">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P:wght@400&display=swap" rel="stylesheet">
     
 </head>
 
 <!--conecta o arquivo CSS ao HTML:-->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="public/css/style.css">
 
 <body>
     <!-- HEADER FIXO PIXELIZADO -->
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
