--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta name="description" content="A maior loja de modelos 3D para impressão do Brasil! Helicópteros, aviões, tanques com estética pixelizada dos anos 80. Qualidade profissional garantida.">
     <meta name="keywords" content="impressão 3D, modelos 3D, 3dbenchy, stl, 3d printing, brasil">
     <link rel="icon" type="image/x-icon" href="public/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P:wght@400&display=swap" rel="stylesheet">
+    < href="https://fonts.googleapis.com/css2?family=Press+Start+2P:wght@400&display=swap" rel="stylesheet">
     
 </head>
 
 <!--conecta o arquivo CSS ao HTML:-->
-<link rel="stylesheet" href="public/css/style.css">
+<link rel="stylesheet" href="frontend/css/style.css">
 
 <body>
     <!-- HEADER FIXO PIXELIZADO -->
@@ -182,16 +182,16 @@
 </div>
 
 <!--carregar todos os arquivos JavaScript na ordem correta-->
-<script src="js/config.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/products.js"></script>
-<script src="js/cart.js"></script>
-<script src="js/navigation.js"></script>
-<script src="js/main.js"></script>
-<script src="js/accessibility.js"></script>
-
+<script src="frontend/js/config.js"></script>
+<script src="frontend/js/auth.js"></script>
+<script src="frontend/js/products.js"></script>
+<script src="frontend/js/cart.js"></script>
+<script src="frontend/js/navigation.js"></script>
+<script src="frontend/js/main.js"></script>
+<script src="frontend/js/accessibility.js"></script>
 </body>
 </html>
+
 
 
 
